ran QA on all devices. added flex-grow to main and body tags to prevent gaps/unintentional whitespace in site content.

--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,25 @@ textarea {
 
   html {
   font-size: 16px;
+  width: 100%;
+  height: 100%;
   }
 
   body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-   }
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    flex-grow: 1;
+    }
+
+  main {
+    display: flex;
+    flex-flow: row wrap;
+    flex-grow: 1;
+  }
 
    h1 {
      font-family: 'Poppins', sans-serif;
@@ -247,22 +260,13 @@ header nav ul li {
 
 /* ------------------------ HOME PAGE STYLES ------------------------ */
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-}
-
 section {
   width: 100%;
   /* margin: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 }
 
 .newsletter-signup {
@@ -942,7 +946,7 @@ footer .copyright {
   /* Footer STYLES */
 
   footer {
-    height: 340px;
+    /* height: 340px; */
   }
 
   footer .footer-contact,
